# wikiarena

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_V2.md  Procfile  README.md  SIMPLIFIED_ARCHITECTURE_PROPOSAL.md  STARTUP.md  TASK_SELECTION_REFACTOR.md  application.py  arch2.md  client.py  client_example.py  config.json  models.json  openrouter_models.json  pyproject.toml
.cursor/rules/: style.mdc  uv.mdc
.ebextensions/: 01-ebs-attach.config
.github/workflows/: build.yml  deploy.yml
.platform/: README.md
backend/: README.md  config.py  main.py
backend/api/: __init__.py  solver.py
backend/models/: __init__.py  solver_models.py
backend/services/: __init__.py  game_service.py  wiki_db_service.py  wiki_solver_service.py
backend/utils/: wiki_helpers.py
backend_game_results/: backend_games.jsonl  backend_games_summary.csv
database/schema/: createPagesTable.sql
database/scripts/: buildDatabase.sh  combine_grouped_links_files.py  merge_links.py  merge_links_slow.py  prune_pages_file.py  replace_titles_and_redirects_in_links_file.py  replace_titles_in_redirects_file.py  trim_wikipedia_dump.py  validation.ipynb
database/vibecoded/: test_solver.py
docs/: DEPLOYMENT.md  MODEL_CONFIGURATION.md  TASK_SELECTOR.md  page_selector.md
frontend/: ARCHITECTURE.md  README.md  config.ts  cycling-service.ts  game-sequence.ts  game-state.ts  game.html  graph-renderer.ts  icon-service.ts  index.html  loading-animation.ts  main.ts  model-selector.ts  model-service.ts  package-lock.json  package.json  page-graph-renderer.ts  player-color-service.ts  player-colors.ts  race-hud-controller.ts  style.css  tailwind.config.js  task-connection-manager.ts  task-manager.ts  tsconfig.app.json  types.ts  ui-controller.ts  vite.config.ts  websocket.ts  wikipedia-autocomplete.ts  wikipedia-random.ts  wikipedia-search.ts  wikipedia-stats.ts
frontend/src/: App.tsx  index.css
game_results/: games.jsonl  games_summary.csv
mcp_server/: server.py
scripts/: check_openrouter_key.py  fetch_openrouter_models.py  print_openrouter_models.py
src/backend/: README.md  __init__.py  config.py  dependencies.py  ebs_mount.py  exceptions.py  main.py
src/mcp_client/: client.py
src/mcp_server/: server.py
src/wiki_arena/: __init__.py  events.py  game.py  logging_config.py  main.py  models.py  tools.py  types.py
src/wiki_path_poc/: graph_cache.py  main.py  path_finder.py  test_client.py  test_random_pairs.py
tests/: conftest.py  test_capabilities.py  test_game_manager.py  test_page_selector.py
tests/api/: test_solver_api.py
tests/language_models/: __init__.py  test_language_models_integration.py  test_providers_with_mocks.py
tests/mcp_client/: test_client_integration.py
tests/mcp_server/: test_server.py
tests/services/: test_wiki_db_service.py  test_wiki_solver_service.py
tests/wiki_arena/: test_capabilities.py  test_db_speed_benchmark.py  test_eventbus.py  test_game.py  test_leaderboard_flow.py  test_registry.py  test_solver_integration.py  test_static_solver_db.py
tests_legacy/backend_tests/: test_api_viewing_experience.py
tests_legacy/tests/: __init__.py  test_adapters.py  test_game_manager.py
wiki_arena/: main.py
wiki_arena/capabilities/: navigation.py
wiki_arena/cli/: list_models.py
wiki_arena/config/: app_config.py
wiki_arena/data_models/: game_models.py
wiki_arena/game/: game_manager.py
wiki_arena/language_models/: __init__.py  anthropic_model.py  language_model.py  openai_model.py  random_model.py  registry.py
wiki_arena/mcp_client/: client.py
wiki_path_poc/: main.py  models.py  path_finder.py  test_random_pairs.py  wikipedia_client.py
(+86 files in other folders)
