[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki-arena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.0",
    "aiosqlite>=0.20.0",
    "anthropic>=0.51.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.0",
    "openai>=1.79.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "tqdm>=4.66.0",
    "uvicorn[standard]>=0.34.2",
    "websockets==11.0.3",
    "wikipedia-api>=0.8.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Test discovery and execution
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Essential: Enable src/ package imports during testing
pythonpath = ["src"]

# Output and behavior
addopts = [
    "--asyncio-mode=auto",
    "--tb=short",
    "--strict-markers",
    "-v",
]

# Async configuration
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

# Test markers for organization
markers = [
    "unit: Unit tests with no external dependencies",
    "integration: Integration tests with real dependencies", 
    "slow: Tests that take more than 1 second",
    "requires_db: Tests that need wiki_graph.sqlite",
    "requires_mcp: Tests that need MCP server running",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "websockets>=11.0.3",
]
